<resources>
    <string name="app_name">mgMovie</string>
    <string name="title_home">mgMovie</string>
    <string name="title_dashboard">Genres</string>
    <string name="title_notifications">Famous Actors</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_">NEW</string>
    <string name="popular">POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="upcoming">UPCOMING</string>
    <string name="actors">Actors</string>
    <string name="overview">Overview:</string>
    <string name="companies">Production Companies:</string>
    <string name="GOOGLE_API_KEY">AIzaSyBbU7DxkddNy63DccbOAvVi-z0fpGkOsSk</string>
    <string name="release_date">Release Date:</string>
    <string name="headquarters">Headquarters:</string>
    <string name="special_thanks_to">special thanks to:</string>
    <string name="rating">Rating:</string>
    <string name="name">Name:</string>
    <string name="birthday">Birthday</string>
    <string name="place_of_birth">Place of birth:</string>
    <string name="biography">Biography:</string>
    <string name="popularity">Popularity</string>
    <string name="homepage">Homepage</string>
    <string name="description">Description:</string>
    <string name="budget">Budget:</string>
    <string name="show">Watch Trailer</string>
    <string name="search">Search movies</string>
    <string name="search_movies">Search</string>
    <string name="tv_shows">TV Shows</string>
    <string name="movies">Movies</string>
    <string name="home">Home</string>
</resources>